--- a/pom.xml
+++ b/pom.xml
@@ -35,4 +35,8 @@
       </plugin>
     </plugins>
   </build>
+  <build>
+        <sourceDirectory>src</sourceDirectory>
+        <testSourceDirectory>test</testSourceDirectory>
+   </build>
 </project>
